# vslam-pose-estimation-framework

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: azure-build-and-deploy.yml  build-and-deploy-docker-image.yml  build-docker-image.yml  build_docker_image.yml  build_image.yml  d1.base.dockerfile  docker-publish.yml  main_devcourseteam3.yml  run-app.yml  run-slam.yml  run_app_00.yml  run_app_04.yml
configurations/: configuration_euroc.yaml  configuration_kitti.yaml
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
dockerfiles/: _01_base.dockerfile  build.dockerfile  d1.base.dockerfile  d2.load-data.dockerfile  d3.build.dockerfile  d3.run.dockerfile  d4.00.run-app.dockerfile  d4.04.run-app.dockerfile  d4.rebuild-repo.dockerfile
examples/: image_process.cpp
executables/: CMakeLists.txt  app.cpp
modules/: CMakeLists.txt
modules/image_module/: CMakeLists.txt
modules/image_module/include/image_module/: extract_features.hpp
modules/image_module/src/: extract_features.cpp
src/aligners/: AndersonAcceleration.h  CMakeLists.txt  Types.h  base_local_map_aligner.h  fast_aligner.cpp  fast_aligner.h
src/framepoint_generation/: CMakeLists.txt  base_framepoint_generator.cpp  base_framepoint_generator.h  depth_framepoint_generator.cpp  stereo_framepoint_generator.cpp
src/map_optimization/: graph_optimizer.cpp  graph_optimizer.h
src/position_tracking/: CMakeLists.txt  pose_tracker_3d.cpp  pose_tracker_3d.h
src/relocalization/: CMakeLists.txt  relocalizer.cpp  (+1 more)
(+14 files in other folders)
